@@ -13,8 +13,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>8</source>
-                    <target>8</target>
+                    <source>13</source>
+                    <target>13</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
@@ -25,6 +26,7 @@
                     <suiteXmlFiles>
                         <suiteXmlFile>run/testng.xml</suiteXmlFile>
                     </suiteXmlFiles>
+                    <argLine>--enable-preview</argLine>
                 </configuration>
             </plugin>
         </plugins>
